<resources>
    <string name="app_name">ADAB</string>
    <string name="setting">Setting</string>
    <string name="transcript_heading">Transkrip</string>
    <string name="schedule_heading">Jadwal</string>
    <string name="no_transcript">Tidak Ada Transkrip</string>
    <string name="back">Back Button</string>
    <string name="greetings">Halo,</string>
    <string name="no_class">Tidak Ada Kelas</string>
    <string name="menu_schedule">Jadwal</string>
    <string name="menu_class">Kelas</string>
    <string name="menu_discussion">Diskusi</string>
    <string name="menu_home">Home</string>
    <string name="menu_register">Register</string>
    <string name="stop_rec_button">BERHENTI</string>
    <string name="class_not_started">Kelas belum dimulai</string>
    <string name="logout">Log Out</string>
    <string name="loading">Mengambil data...</string>
    <string name="register">Buat Akun</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="role">Peran</string>
    <string name="password">Kata Sandi</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="register_button">DAFTAR</string>
    <string name="choose_language">Pilih Bahasa</string>
    <string name="cancel">Batal</string>
    <string name="continues">Lanjut</string>
    <string name="login_desc">Sign in untuk melanjutkan</string>
    <string name="login_button">LOGIN</string>
    <string name="session">Sesi</string>
    <string name="me">Saya</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="save_button">SIMPAN</string>
    <string name="no_internet">Tidak Ada Koneksi</string>
    <string name="no_session">Tidak Ada Sesi</string>
    <string name="back_to_login">KEMBALI KE LOGIN</string>
</resources>