<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:weightSum="25">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="52sp"
        android:text="@string/app_name"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:textColor="#3C6DB9"
        android:textSize="36sp"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_desc"
        android:layout_marginLeft="18dp"
        android:textColor="#3C6DB9"
        android:textSize="16sp"
        android:layout_weight="0.1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        >

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/format_form"
            android:hint="@string/email"
            android:paddingLeft="16dp"
            android:paddingRight="21dp"
            android:singleLine="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:background="#ffffff"
            android:text="@string/email"
            android:padding="1dp"
            android:textColor="#3C6DB9"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5">
        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/format_form"
            android:paddingLeft="16dp"
            android:paddingRight="21dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:background="#ffffff"
            android:text="@string/password"
            android:padding="1dp"
            android:textColor="#3C6DB9"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_button"
        android:background="@drawable/button_regis_login"
        android:backgroundTint="@color/orange"
        app:backgroundTint="@null"
        android:layout_weight="0.5"/>

</LinearLayout>