<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:weightSum="8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/card_background">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_weight="1">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="380dp"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/format_form"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:singleLine="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:background="#ffffff"
            android:text="@string/old_password"
            android:padding="1dp"
            android:textColor="#3C6DB9"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_weight="1">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="380dp"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/format_form"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:singleLine="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:background="#ffffff"
            android:text="@string/new_password"
            android:padding="1dp"
            android:textColor="#3C6DB9"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save_button"
        android:background="@drawable/button_regis_login"
        android:backgroundTint="@color/orange"
        app:backgroundTint="@null"
        android:layout_weight="0.55"/>

</LinearLayout>